<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">E.V.I.L.</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="villian">E.V.I.L.</string>
    <string name="to_cart">GO TO CART</string>
    <string name="get_data">Get Data</string>
    <string name="store_data">Store data</string>
    <string name="login">Login</string>
    <string name="signIn">SignUp</string>
    <string name="email_signin">Email</string>
    <string name="title_activity_welcome">welcome</string>
    <string name="exit">exit</string>
    <string name="logout">Logout</string>
    <string name="cart">Cart</string>
    <string name="checkout">Checkout</string>
    <string name="back_to_cart">Back to Cart</string>
    <string name="search">Search</string>
    <string name="go_home">Home</string>
    <string name="by_song">By Song</string>
    <string name="by_artist">By Artist</string>
    <string name="purchase">Purchase</string>
    <string name="title_activity_browse">BrowseActivity</string>
</resources>
