<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/twSearch"
        android:layout_marginTop="66dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="41dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/btnSearch"
        android:layout_alignBottom="@+id/twSearch"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_home"
        android:id="@+id/btnGoHome"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/homeListView"
        android:layout_above="@+id/btnGoHome"
        android:layout_below="@+id/rbArtist" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_artist"
        android:id="@+id/rbArtist"
        android:layout_below="@+id/twSearch"
        android:layout_alignLeft="@+id/twSearch"
        android:layout_alignStart="@+id/twSearch" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_song"
        android:id="@+id/rbSong"
        android:layout_below="@+id/twSearch"
        android:layout_alignLeft="@+id/btnGoHome"
        android:layout_alignStart="@+id/btnGoHome" />


</RelativeLayout>