<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/evil">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvWelcome"
        android:layout_marginTop="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart"
        android:id="@+id/btnCart"
        android:layout_alignBaseline="@+id/tvWelcome"
        android:layout_alignBottom="@+id/tvWelcome"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/btnLogout"
        android:layout_below="@+id/btnCart"
        android:layout_alignRight="@+id/btnCart"
        android:layout_alignEnd="@+id/btnCart"
        android:layout_marginTop="40dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkout"
        android:id="@+id/btnCheckout"
        android:layout_marginBottom="42dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btnLogout"
        android:layout_alignEnd="@+id/btnLogout" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/homeListView"
        android:layout_below="@+id/btnLogout"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btnCheckout"
        android:background="#FFFFFF"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/btnSearch"
        android:layout_above="@+id/homeListView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Browse"
        android:id="@+id/browseButton"
        android:layout_below="@+id/homeListView"
        android:layout_alignLeft="@+id/btnSearch"
        android:layout_alignStart="@+id/btnSearch" />

</RelativeLayout>